fast-forward from first commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,35 @@
 <resources>
     <string name="app_name">Bender Mobile</string>
-    <string name="itemTableText">Tavolo N°.</string>
+    <string name="itemTableText">"Tavolo N°. "</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="tableTitle">Dettaglio Tavolo N°.</string>
     <string name="addToTableText">Aggiungi Piatto</string>
-    <string name="tableTitleDetailText">Piatti ancora da servire</string>
+    <string name="tableTitleDetailText">Elenco ordini</string>
     <string name="totalPrice">Prezzo Totale:</string>
     <string name="updateButtonString">Aggiorna</string>
+    <string name="StringDettaglioOrdine">Dettaglio Ordine</string>
+    <string name="StringOrdinati">"Piatti ordinati: "</string>
+    <string name="StringDaServire">"Piatti da servire: "</string>
+    <string name="StringCostoUnitario">"Costo unitario: "</string>
+    <string name="StringCostoServiti">"Costo serviti: "</string>
+    <string name="StringCOstoTotale">"Costo totale: "</string>
+    <string name="settings">Impostazioni</string>
+    <string name="main_update">Aggiorna</string>
+    <string name="settings_ip_text">Inserisci qui l\' IP del server</string>
+    <string name="ip_button">Fatto</string>
+    <string name="orderAddSuccess">Ordine aggiunto correttamente</string>
+    <string name="ResetConfirmDialogTitle">Conferma Reset</string>
+    <string name="ResetConfirmDialogQuestion">Vuoi davvero ripristinare il tavolo selezionato?</string>
+    <string name="ServerError">Impossibile comunicare col server</string>
+    <string name="ResetSuccess">Tavolo ripristinato con successo</string>
+    <string name="UpdateSuccess">Ordine aggiornato con successo</string>
+    <string name="NameUpdateSuccess">Nome impostato con successo</string>
+    <string name="Remove">"Rimuovi (1)"</string>
+    <string name="ViewAllPendingOrders">Da Servire</string>
+    <string name="Aggiungi">Aggiungi</string>
+    <string name="NomePiatto">Nome Piatto</string>
+    <string name="PrezzoPiatto">Prezzo Piatto</string>
+    <string name="PrezzoTotale">"Conto Totale: "</string>
+    <string name="valute">€</string>
+    <string name="NomeTavolo">Inserisci qui il nuovo nome del tavolo</string>
 </resources>
